Minor layout fixes and style horizontal scrollbar.

--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -31,7 +31,7 @@
     --text-color: #fafafa;
     --scrollbar-color: #555555;
     --font-weight: 380;
-    --heading-font-weight: 500;
+    --heading-font-weight: 600;
   }
 }
 
@@ -48,7 +48,7 @@
   --text-color: #fafafa;
   --scrollbar-color: #555555;
   --font-weight: 380;
-  --heading-font-weight: 500;
+  --heading-font-weight: 600;
 }
 
 h1,
